propellor (5.3.2) UNRELEASED; urgency=medium

  * Added Git.pulled.

 -- Joey Hess <id@joeyh.name>  Sun, 11 Feb 2018 11:58:04 -0400

propellor (5.3.1) unstable; urgency=medium

  * Last release mistakenly contained my personal branch not master.
  * contrib/post-merge-hook documentation updated to recommend also using
    it as a post-checkout hook, to avoid such problems.

 -- Joey Hess <id@joeyh.name>  Sun, 04 Feb 2018 12:00:03 -0400

propellor (5.3.0) unstable; urgency=medium

  * Avoid bogus warning about new upstream version when /usr/bin/propellor
    is run on a Debian system, but ~/.propellor was not cloned from the
    Debian git bundle.
  * Parted: Allow partitions to have no filesystem, for eg, GPT BIOS boot
    partitions. (API change)
  * Added rawPartition to PartSpec, for specifying partitions with no
    filesystem.
  * Added BiosGrubFlag to PartFlag.
  * Add HasCallStack constraint to pickOS and unsupportedOS, so the
    call stack includes the caller.
  * Run su with --login, to avoid inheriting some problematic environment
    variables, such as TMP, from the caller.
  * Grub: Added properties to configure /etc/default/grub.
  * Laptop: New module, starting with powertopAutoTuneOnBoot.

 -- Joey Hess <id@joeyh.name>  Thu, 01 Feb 2018 12:27:01 -0400

propellor (5.2.0) unstable; urgency=medium

  [ Joey Hess ]
  * bootstrappedFrom: Set up local privdata file.
  * Parted: Fix names used for FAT and VFAT partitions.
  * Parted: Add an Alignment parameter. (API change)
    A good default to use is safeAlignment, which is 4MiB,
    well suited for inexpensive flash drives, and fine for other disks too.
    Previously, a very non-optimial 1MB (not 1MiB) alignment had been used.
  * DiskImage: Use safeAlignment. It didn't seem worth making the
    alignment configurable here.
  * Fixed rounding bug in Parted.calcPartTable.
  * DiskImage: Fix rsync crash when a mount point does not exist in the
    chroot.