@@ -1,5 +1,9 @@
 propellor (5.3.2) UNRELEASED; urgency=medium
 
+  * Added Propellor.Property.Atomic, which can make a non-atomic property
+    that operates on a directory into an atomic property.
+    (Inspired by Vaibhav Sagar's talk on Functional Devops in a
+    Dysfunctional World at LCA 2018.)
   * Added Git.pulled.
 
  -- Joey Hess <id@joeyh.name>  Sun, 11 Feb 2018 11:58:04 -0400
